--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,11 +4,23 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: username
         users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        admin:
+            pattern: ^/admin
+            provider: app_user_provider
+            form_login:
+                default_target_path: app_admin_photo
+                login_path: admin_account_login
+                check_path: admin_account_login
         main:
             lazy: true
             provider: users_in_memory
