--- a/.env
+++ b/.env
@@ -39,4 +39,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
+MAILER_DSN=smtp://63d4724405141c:b18e1a734e7cbe@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
