mise en ligne toiture marlier

--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=13d3d23b003434575e9fd1195a76ca7d
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://root:@127.0.0.1:3306/marlier?serverVersion=5.7"
-DATABASE_URL="mysql://vsup3936_admin:q=91JGzs7_WN@127.0.0.1:3306/vsup3936_marlier?serverVersion=5.7"
+DATABASE_URL="mysql://bavi4794_admin:@Flea2909@127.0.0.1:3306/bavi4794_marlier?serverVersion=5.7"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
@@ -39,6 +39,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
-MAILER_DSN=smtp://noreply@wip.duboismax.com:EpseWip2023@granite.o2switch.net:465
+MAILER_DSN=smtp://noreply@toiture-marlier.be:@Flea2909@grue.o2switch.net:465
 # MAILER_DSN=smtp://63d4724405141c:b18e1a734e7cbe@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
